force-app/main/default/objects/Producto_Contrato__c/Producto_Contrato__c.object-meta.xml
<CustomObject>
    <label>Producto contratado</label>
    <nameField>
        <label>Producto Contrato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos contratados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>