force-app/main/default/objects/Producto_Contrato__c/fields/Antig_edad_Dias__c.field-meta.xml
<CustomField>
    <fullName>Antig_edad_Dias__c</fullName>
    <description>Antigüedad de la suscripción en días. Uso para informes</description>
    <formula>(Fecha_de_contratacion_date__c) - (DATEVALUE(Contract__r.Fecha_Alta_Contrato__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antigüedad (Días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>