force-app/main/default/objects/Producto_Contrato__c/fields/Baja_ma_ana__c.field-meta.xml
<CustomField>
    <fullName>Baja_ma_ana__c</fullName>
    <description>Campo para indicar que la suscripción se cancelará el dia siguiente. Uso para informes.</description>
    <formula>IF(AND( ISPICKVAL(Status__c, &apos;Pendiente de Cancelación&apos;) ,Contract__r.billing_day__c = DAY(TODAY()+1)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baja mañana</label>
    <type>Checkbox</type>
</CustomField>