force-app/main/default/objects/Producto_Contrato__c/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Productos contratados</relationshipLabel>
    <relationshipName>Productos_contratados</relationshipName>
    <type>Lookup</type>
</CustomField>