force-app/main/default/objects/Producto_Contrato__c/fields/Codigo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Campaign__c</fullName>
    <label>Código de campaña</label>
    <length>254</length>
    <type>Text</type>
</CustomField>