force-app/main/default/objects/Producto_Contrato__c/fields/Descripcion_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Campaign__c</fullName>
    <label>Descripción de Campaña</label>
    <type>TextArea</type>
</CustomField>