force-app/main/default/objects/Producto_Contrato__c/fields/Descuento_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Campaign__c</fullName>
    <label>Descuento de Campaña</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>