force-app/main/default/objects/Producto_Contrato__c/fields/Fecha_de_contratacion_date__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_contratacion_date__c</fullName>
    <formula>DATEVALUE( Fecha_contratacion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de contratación</label>
    <type>Date</type>
</CustomField>