force-app/main/default/objects/Producto_Contrato__c/fields/Fecha_Fin_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Campaign__c</fullName>
    <label>Fecha fin Campaña</label>
    <type>DateTime</type>
</CustomField>