force-app/main/default/objects/Producto_Contrato__c/fields/Fecha_solicitud_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solicitud_cancelacion__c</fullName>
    <label>Fecha de solicitud de cancelación</label>
    <type>DateTime</type>
</CustomField>