force-app/main/default/objects/Producto_Contrato__c/fields/Fecha_Solicitud_Cancelacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Solicitud_Cancelacion_Formula__c</fullName>
    <formula>DATEVALUE(Fecha_solicitud_cancelacion__c + ( $Setup.Correccion_Hora__c.Horas_Add__c /24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Solicitud Cancelación</label>
    <type>Date</type>
</CustomField>