force-app/main/default/objects/Producto_Contrato__c/fields/Finished_date__c.field-meta.xml
<CustomField>
    <fullName>Finished_date__c</fullName>
    <label>Fecha de cancelación</label>
    <type>Date</type>
</CustomField>