force-app/main/default/objects/Producto_Contrato__c/fields/Hora_contratacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_contratacion__c</fullName>
    <description>Recoge la hora de contratación para el uso en informes</description>
    <formula>HOUR(TIMEVALUE(CreatedDate + ( $Setup.Correccion_Hora__c.Horas_Add__c /24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora contratación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>