force-app/main/default/objects/Producto_Contrato__c/fields/ID_Campaign_Asociada__c.field-meta.xml
<CustomField>
    <fullName>ID_Campaign_Asociada__c</fullName>
    <label>Id Campaña Asociada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>