force-app/main/default/objects/Producto_Contrato__c/fields/Id_Externo_FechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo_FechaCreacion__c</fullName>
    <formula>Text(YEAR(DATEVALUE(CreatedDate)))
+ IF(MONTH(DATEVALUE(CreatedDate))&lt;10,&apos;0&apos;+Text (MONTH(DATEVALUE(CreatedDate))),Text (MONTH(DATEVALUE(CreatedDate))))
+ IF(DAY(DATEVALUE(CreatedDate))&lt;10,&apos;0&apos;+Text (DAY(DATEVALUE(CreatedDate))),Text (DAY(DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id_Externo_FechaCreacion</label>
    <type>Text</type>
</CustomField>