force-app/main/default/objects/Producto_Contrato__c/fields/Motivo_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cancelacion__c</fullName>
    <label>Motivo de cancelación</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>