force-app/main/default/objects/Producto_Contrato__c/fields/Nombre_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Producto__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Producto</label>
    <type>Text</type>
</CustomField>