force-app/main/default/objects/Producto_Contrato__c/fields/Origen_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Origen_Campaign__c</fullName>
    <formula>IF( OR(ID_Campaign_Asociada__c == &apos;DO0014&apos;, ID_Campaign_Asociada__c == &apos;DO0015&apos;), &apos;Bundle&apos;, &apos;No bundle&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen Campaña</label>
    <type>Text</type>
</CustomField>