force-app/main/default/objects/Producto_Contrato__c/fields/Origen_Ocasional__c.field-meta.xml
<CustomField>
    <fullName>Origen_Ocasional__c</fullName>
    <description>Campo para indicar que la suscripción viene de origen ocasional, fecha alta contrato es menor que fecha de contratación. Uso para filtros de informes</description>
    <formula>DATEVALUE(Contract__r.Fecha_Alta_Contrato__c) &lt;  Fecha_de_contratacion_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen Ocasional</label>
    <type>Checkbox</type>
</CustomField>