force-app/main/default/objects/Producto_Contrato__c/fields/Precio_Producto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Producto__c</fullName>
    <formula>Precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>