force-app/main/default/objects/Producto_Contrato__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Descripción de producto</label>
    <type>TextArea</type>
</CustomField>