force-app/main/default/objects/Producto_Contrato__c/fields/Product_ID_Vindicia__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Vindicia__c</fullName>
    <label>Id Producto Vindicia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>