force-app/main/default/objects/Producto_Contrato__c/fields/recordtype_name__c.field-meta.xml
<CustomField>
    <fullName>recordtype_name__c</fullName>
    <formula>Product__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name del recordtype</label>
    <type>Text</type>
</CustomField>