force-app/main/default/objects/Producto_Contrato__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pendiente de Cancelación</fullName>
            </value>
            <value>
                <fullName>Pausado</fullName>
            </value>
            <value>
                <fullName>Pendiente de Pausa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>