force-app/main/default/objects/Producto_Contrato__c/fields/Suscriptor_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Suscriptor_nuevo__c</fullName>
    <description>Campo que verifica si se ha dado de alta el mismo dia que el contrato, para filtro en informes</description>
    <formula>IF(Fecha_de_contratacion_date__c = DATEVALUE(Contract__r.Fecha_Alta_Contrato__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suscriptor nuevo</label>
    <type>Checkbox</type>
</CustomField>